# dilithion

./: .gitignore  Makefile  PROGRESS.md  build-release.sh  check-wallet-balance.cpp  package-dilv-linux-release.sh  package-dilv-macos-release.sh  package-linux-release.sh  package-macos-release.sh  start-miner-gui.sh
.github/workflows/: build-dilv-macos.yml  build-macos.yml  ci.yml  fuzz-extended-campaigns.yml  macos-mik-diagnostic.yml
components/common/: amount.h  uint256.h
docs/: TX-RELAY-PROTOCOL.md
docs/mining/: MINING_GUIDE_LINUX.md  MINING_GUIDE_MACOS.md  MINING_GUIDE_WINDOWS.md
explorer/: Cargo.toml
explorer/api/: blocks.php  financial.php  holders.php  metrics_helpers.php  nodes.php  rpc.php  stats.php  supply.php  transactions.php  tx.php
explorer/src/: main.rs
explorer/static/: explorer.js  index.html  style.css
scripts/: gen-embedded-html.sh  verify_incident_forensics.sh
src/api/: http_server.cpp  http_server.h
src/attestation/: seed_attestation.cpp
src/consensus/: chain.cpp  chain.h  params.h  pow.cpp
src/core/: chainparams.cpp  chainparams.h  node_context.cpp  node_context.h
src/miner/: controller.cpp  controller.h
src/net/: block_fetcher.cpp  block_fetcher.h  block_tracker.h  chain_tips_tracker.cpp  chain_tips_tracker.h  connman.cpp  connman.h  headers_manager.cpp  headers_manager.h  headerssync.cpp  headerssync.h  net.cpp  net.h  node.h  peer_discovery.cpp  peer_discovery.h  peers.cpp  peers.h
src/node/: block_index.cpp  block_index.h  (+12 more)
tools/: v4_4_inject_undo_corruption.cpp
website/: Cargo.toml  bridge.html  wallet.html
(+423 files in other folders)
