[package]
name = "explorer-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
base64 = "0.22"
futures = "0.3"
cached = "0.48"
chrono = "0.4"
